tests/ui/trait-bounds/unstable-trait-suggestion.stderr
error[E0277]: the trait bound `T: Unstable` is not satisfied
  --> $DIR/unstable-trait-suggestion.rs:13:9
   |
LL |     foo(t)
   |     --- ^ the nightly-only, unstable trait `Unstable` is not implemented for `T`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/unstable-trait-suggestion.rs:9:11
   |
LL | fn foo<T: Unstable>(_: T) {}
   |           ^^^^^^^^ required by this bound in `foo`
help: consider restricting type parameter `T` with unstable trait `Unstable`
   |
LL | pub fn bar<T: Unstable>(t: T) {
   |             ++++++++++

error[E0277]: `std::ops::Range<T>` is not an iterator
  --> $DIR/unstable-trait-suggestion.rs:17:14
   |
LL |     for _ in t {}
   |              ^ `Range<T>` is not an iterator
   |
   = note: `Range` only implements `Iterator` for select types in the standard library, particularly integers; to see the full list of types, see the documentation for the unstable `Step` trait
   = note: required for `std::ops::Range<T>` to implement `Iterator`
   = note: required for `std::ops::Range<T>` to implement `IntoIterator`
help: consider restricting type parameter `T` with unstable trait `Step`
   |
LL | pub fn baz<T: std::iter::Step>(t: std::ops::Range<T>) {
   |             +++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
